@@ -154,6 +154,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - MPASM                  Bakalex
 - MXML                   David Spurr
 - MySQL                  Carl Fürstenberg, Marjolein Katsma
+- Nagios                 Albéric de Pertat
 - NewLisp                cormullion
 - NSIS                   Tux, Deguix
 - Oberon-2               Mike Mol
