@@ -18,6 +18,7 @@ Version 1.0.8.11
      * DCL (Petr Hendl)
      * DCPU-16 (Benny Baumann)
      * LDIF (Bruno Harbulot)
+     * Nagios (Albéric de Pertat)
      * PARI/GP (Charles R Greathouse IV)
      * SPARK (Phil Thornley)
      * StoneScript (Archimmersion)
